--- a/hooks.yaml
+++ b/hooks.yaml
@@ -5,7 +5,7 @@
     language: system
     files: '\.l?hs$'
 -   id: hlint-suggestions
-    name: hlint
+    name: hlint-suggestions
     description: HLint gives suggestions on how to improve your source code, but still returns zero exti code.
     entry: hlint --no-exit-code
     language: system
