--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -7,7 +7,13 @@
 -   id: hlint-suggestions
     name: hlint-suggestions
     description: HLint gives suggestions on how to improve your source code, but still returns zero exti code.
-    entry: hlint --no-exit-code
+    entry: hlint --no-exit-code 
+    language: system
+    files: '\.l?hs$'
+-   id: hlint-suggestions-ignore-duplication
+    name: hlint-suggestions
+    description: HLint gives suggestions on how to improve your source code, but still returns zero exti code.
+    entry: hlint -i 'Reduce duplication' --no-exit-code 
     language: system
     files: '\.l?hs$'
 -   id: stylish-haskell
